# ChangeLog for app-emacs/csharp-mode
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/csharp-mode/ChangeLog,v 1.11 2009/09/22 11:22:49 maekke Exp $

  22 Sep 2009; Markus Meier <maekke@gentoo.org> csharp-mode-0.7.0-r1.ebuild:
  amd64/x86 stable, bug #285904

*csharp-mode-0.7.0-r1 (26 Aug 2009)

  26 Aug 2009; Ulrich Mueller <ulm@gentoo.org>
  +files/50csharp-mode-gentoo.el, +csharp-mode-0.7.0-r1.ebuild:
  Adjust dependencies, since cc-mode is going away, bug 282662. Rename site
  file to canonical name.

  03 Jun 2009; Christian Faulhammer <fauli@gentoo.org>
  csharp-mode-0.7.0.ebuild:
  correct HOMEPAGE and SRC_URI

  14 Jun 2008; Ulrich Mueller <ulm@gentoo.org> csharp-mode-0.7.0.ebuild:
  Do not assign SIMPLE_ELISP since elisp.eclass now detects this case
  automatically.

  17 Feb 2008; Christian Faulhammer <opfer@gentoo.org>
  csharp-mode-0.7.0.ebuild:
  stable x86/amd64

  07 Dec 2007; Ulrich Mueller <ulm@gentoo.org> -csharp-mode-0.6.0-r1.ebuild,
  csharp-mode-0.7.0.ebuild:
  Undo previous change. Remove old version.

  04 Dec 2007; Ulrich Mueller <ulm@gentoo.org> csharp-mode-0.6.0-r1.ebuild,
  csharp-mode-0.7.0.ebuild:
  Explicitely call elisp_pkg_setup.

*csharp-mode-0.7.0 (24 Oct 2007)

  24 Oct 2007; Ulrich Mueller <ulm@gentoo.org> -csharp-mode-0.5.0.ebuild,
  +csharp-mode-0.7.0.ebuild:
  Version bump and remove old.

*csharp-mode-0.6.0-r1 (02 Jul 2007)

  02 Jul 2007; Christian Faulhammer <opfer@gentoo.org>
  -csharp-mode-0.6.0.ebuild, +csharp-mode-0.6.0-r1.ebuild:
  using new-style virtual dependency

*csharp-mode-0.6.0 (26 Apr 2007)

  26 Apr 2007; Ulrich Mueller <ulm@gentoo.org> csharp-mode-0.5.0.ebuild,
  +csharp-mode-0.6.0.ebuild:
  Version bump. Define SIMPLE_ELISP=t.

*csharp-mode-0.5.0 (27 Jul 2006)

  27 Jul 2006; Matthew Kennedy <mkennedy@gentoo.org>
  +files/80csharp-mode-gentoo.el, +metadata.xml, +csharp-mode-0.5.0.ebuild: