@@ -1,6 +1,0 @@
-
-;;; csharp-mode site-lisp configuration
-
-(add-to-list 'load-path "@SITELISP@")
-(autoload 'csharp-mode "csharp-mode" "Major mode for editing C# code." t)
-(add-to-list 'auto-mode-alist '("\\.cs\\'" . csharp-mode))
