@@ -1,6 +1,10 @@
 # ChangeLog for app-emacs/csharp-mode
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/csharp-mode/ChangeLog,v 1.11 2009/09/22 11:22:49 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/csharp-mode/ChangeLog,v 1.12 2009/09/22 12:20:24 ulm Exp $
+
+  22 Sep 2009; Ulrich Mueller <ulm@gentoo.org>
+  -files/80csharp-mode-gentoo.el, -csharp-mode-0.7.0.ebuild:
+  Remove old.
 
   22 Sep 2009; Markus Meier <maekke@gentoo.org> csharp-mode-0.7.0-r1.ebuild:
   amd64/x86 stable, bug #285904
